--- a/css/page.css
+++ b/css/page.css
@@ -7,14 +7,17 @@
 .page{
  padding-inline-end: 2rem ;
  padding-inline-start: 2rem ;
- padding-block-end: 2rem ;
+
 }
 
 .page-block{
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  /* border: 1px solid red; */
 }
+
+
 
 .page .header{
   margin-block-end: 1rem;
